--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       </div>
     </section>
     <p class="">Hello World !</p>
-    <article class="w-full absolute bottom-10 z-10 text-center"><a href="https://eljanbadalov.vercel.app/" class="font-mono text-white flex justify-center items-center gap-2 text-2xl"><i class="fa fa-github text-3xl"></i>GitHub</a></article>
+    <article class="w-full absolute bottom-10 z-10 text-center"><a href="https://github.com/ElcanBadalovs" class="font-mono text-white flex justify-center items-center gap-2 text-2xl"><i class="fa fa-github text-3xl"></i>GitHub</a></article>
     <img src="./Rectangle 97.png" class="absolute bottom-[-5px] left-0 w-full" alt="" srcset="">
     <img src="./Rectangle 96.png" class="absolute bottom-[-5px] left-0 w-full" alt="" srcset="">
     <img src="./Rectangle 95.png" class="absolute bottom-[-5px] left-0 w-full" alt="" srcset="">
